retail-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-ingress
  namespace: retail-store   # change if your app runs in another namespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - retail-store.hussainislearning.shop
      secretName: argocd-server-tls
  rules:
    - host: retail-store.hussainislearning.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retail-store-ui   # change to your app's Service name
                port:
                  number: 80                 # change to your app's Service port
